fix. layout bug and typing error

--- a/less/agency.less
+++ b/less/agency.less
@@ -1187,7 +1187,7 @@ footer.white-footer, footer.white-footer a{
         background-color: #fff;
     }
     .main-row > div:last-child {
-        background-color: #f5f5f5;
+        1background-color: #f5f5f5;
     }
      .programing-kind {
         .rect-shape {
@@ -1641,7 +1641,7 @@ footer.white-footer, footer.white-footer a{
         }
         .apply-btn {
             top: 211px;
-            left:60%;
+            left:70%;
         }
         height: 250px;
         padding-top: 15px;
